feat(docker): add production Docker setup with multi-stage build
Setup containerized development and production environment:
- Multi-stage Dockerfile with builder and production stages
- Updated docker-compose with backend service and healthchecks
- Database credentials standardized (sentinel_user/sentinel_pass)
- Port mapping: PostgreSQL 5433:5432, Backend 4000:4000
- Environment documentation in docs/DOCKER.md

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-# Database
-DATABASE_URL="postgresql://user:password@localhost:5432/sentinel?schema=public"
+# Database (PostgreSQL)
+# Docker Compose internal networking (backend service):
+DATABASE_URL="postgresql://sentinel_user:sentinel_pass@postgres:5432/sentinel_db?schema=public"
+# Local development (connecting from host to port 5433):
+# DATABASE_URL="postgresql://sentinel_user:sentinel_pass@localhost:5433/sentinel_db?schema=public"
 
 # Application
-PORT=3000
+PORT=4000
 NODE_ENV=development
