--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,10 @@
     "strict": true,
     "paths": {
       "@core/*": ["src/core/*"],
-      "@nest-modules/*": ["src/nest-modules/*"]
+      "@nest-modules/*": ["src/nest-modules/*"],
+      "@database": ["src/database"],
+      "@database/*": ["src/database/*"],
+      "@prisma/client": ["src/generated/prisma/client"]
     },
     "types": ["jest"]
   },
