--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.1.0",
     "@prisma/client": "^7.3.0",
+    "@testcontainers/postgresql": "^11.11.0",
     "@types/chance": "^1.1.7",
     "@types/eslint__js": "^9.14.0",
     "@types/express": "^5.0.0",
