build: migrate from pnpm to yarn classic
- Replace pnpm with yarn 1.22.x across all configurations
- Update Dockerfile and Dockerfile.dev to use yarn commands
- Update docker-compose.override.yml to use yarn
- Update .husky/pre-commit to use yarn lint-staged
- Update package.json engines field to require yarn
- Add nest-cli.json assets config for Prisma generated files
- Remove pnpm-lock.yaml and pnpm-workspace.yaml
- Add yarn.lock

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,4 @@
 services:
-  # postgres inherits env_file from base docker-compose.yml
-
   backend:
     build:
       context: .
@@ -14,11 +12,16 @@ services:
       - CHOKIDAR_USEPOLLING=true
     ports:
       - "4000:4000"
-      - "9229:9229"  # Debug port
+      - "9229:9229"
     volumes:
       - .:/app
-      - node_modules:/app/node_modules
-    command: ["pnpm", "start:dev"]
+      - /app/node_modules
+    command: >
+      sh -c "
+        yarn prisma generate &&
+        yarn prisma migrate deploy &&
+        yarn start:dev
+      "
 
 volumes:
   node_modules:
