--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "engines": {
     "node": ">=20.0.0",
-    "pnpm": ">=10.0.0"
+    "yarn": ">=1.22.0"
   },
   "scripts": {
     "build": "nest build",
